// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginStatus - authenticated 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-account__login--link"
    href="/auth/signout"
    id="logout-link"
  >
    Log out
  </a>
</DocumentFragment>
`;

exports[`LoginStatus - configuring 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-account__login--link"
    href="/auth"
    id="login-link"
  >
    Log in
  </a>
</DocumentFragment>
`;

exports[`LoginStatus - unauthenticated 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-account__login--link"
    href="/auth"
    id="login-link"
  >
    Log in
  </a>
</DocumentFragment>
`;
